--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyAH1Vuug_mzIqY0NuMs3HiDxwzHwrqiEF0</string>
+	<string>AIzaSyB3l81DI6c57jyAZUHH3JdXFxNlMY1Pfwo</string>
 	<key>GCM_SENDER_ID</key>
-	<string>311021410716</string>
+	<string>260251608016</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.emptychair.client</string>
+	<string>com.mt.client</string>
 	<key>PROJECT_ID</key>
-	<string>empty-chair-e2a44</string>
+	<string>mt-chair-2024</string>
 	<key>STORAGE_BUCKET</key>
-	<string>empty-chair-e2a44.appspot.com</string>
+	<string>mt-chair-2024.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:311021410716:ios:84d6c00035edd92d10d059</string>
+	<string>1:260251608016:ios:804b11158a0f87e8068fd5</string>
 </dict>
 </plist>
